WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254977
Unreviewed, fix !ENABLE(ACCESSIBILITY) build following
262566@main
https://bugs.webkit.org/show_bug.cgi?id=254977
Summary
Unreviewed, fix !ENABLE(ACCESSIBILITY) build following 262566@main
Ross Kirsling
Reported
2023-04-04 00:39:34 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2023-04-04 00:41:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12368
EWS
Comment 2
2023-04-04 00:45:39 PDT
Committed
262570@main
(b459920528a6): <
https://commits.webkit.org/262570@main
> Reviewed commits have been landed. Closing PR #12368 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-04-04 00:46:14 PDT
<
rdar://problem/107599729
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug