Unreviewed, fix !ENABLE(ACCESSIBILITY) build following 262566@main https://bugs.webkit.org/show_bug.cgi?id=254977

Unreviewed PlayStation build fix.

* Source/WebCore/accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::updateRelations):
Add missing function definition.

Canonical link: https://commits.webkit.org/262570@main